--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <h2>SHOPITEM</h2>
             </div>
             <div class="menu">
-                <a href="a">
+                <a href="">
                     Home
                 </a>
                 <a href="a">
@@ -27,7 +27,7 @@
                     Contato
                 </a>
                 <a class="btnmenu" href="">
-                    Get Start
+                    Comece Aqui
                 </a>
             </div>
         </div>
@@ -42,28 +42,37 @@
                 <br><br><br><br>
                 <div class="diferencias">
                     <div class="diferencial-single">
-                        <i class="fa-brands fa-apple">
-                            <h2>IOS</h2>
-                            <p>Baixe Agora o nosso Aplicativo</p>
-                        </i>
+                        <a href="https://www.apple.com/br/app-store/" target="_blank">
+                            <i class="fa-brands fa-apple">
+                                <h2>IOS</h2>
+                                <p>Baixe Agora o nosso Aplicativo</p>
+                            </i>
+                        </a>
                     </div>
                     <div class="diferencial-single">
-                        <i class="fa-brands fa-android">
-                            <h2>Android</h2>
-                            <p>Baixe Agora o nosso Aplicativo</p>
-                        </i>
+                        <a target="_blank"
+                            href="https://play.google.com/store/games?utm_source=latam_Med&utm_medium=hasem&utm_content=Jul1520&utm_campaign=Evergreen&pcampaignid=MKT-FDR-latam-br-1002290-Med-hasem-py-Evergreen-Jul1520-Text_Search_BKWS-2072327022&gclid=CjwKCAjwiJqWBhBdEiwAtESPaPQTZBBYZd3LLatwhdTeGESZqVBNucbEaT8ZQU05wRDso8-YyVQJdhoCSeIQAvD_BwE&gclsrc=aw.ds">
+                            <i class="fa-brands fa-android">
+                                <h2>Android</h2>
+                                <p>Baixe Agora o nosso Aplicativo</p>
+                            </i>
+                        </a>
                     </div>
                     <div class="diferencial-single">
-                        <i class="fa-brands fa-windows">
-                            <h2>Windows</h2>
-                            <p>Baixe Agora o nosso Aplicativo</p>
-                        </i>
+                        <a href="" target="_blank">
+                            <i class="fa-brands fa-windows">
+                                <h2>Windows</h2>
+                                <p>Baixe Agora o nosso Aplicativo</p>
+                            </i>
+                        </a>
                     </div>
                     <div class="diferencial-single">
-                        <i class="fa-brands fa-linux">
-                            <h2>Linux</h2>
-                            <p>Baixe Agora o nosso Aplicativo</p>
-                        </i>
+                        <a href="" target="_blank">
+                            <i class="fa-brands fa-linux">
+                                <h2>Linux</h2>
+                                <p>Baixe Agora o nosso Aplicativo</p>
+                            </i>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -77,11 +86,13 @@
                 <h2>Sobre a SHOP ITEM</h2>
                 <p>
                     Somos uma empresa que vende produtos industrializados.
+                    <br>
+                    Entre em contato com nós atraves do aplicativo ou se preferir atraves do email.
                 </p>
 
             </div>
             <div class="conteudo-sobre">
-                <p>Entre em contato com nós atraves do aplicativo ou se preferir atraves do email</p>
+                <p></p>
             </div>
         </div>
     </section>
